--- a/cap-marketplace-prototype/src/css/Marketplace.css
+++ b/cap-marketplace-prototype/src/css/Marketplace.css
@@ -9,7 +9,7 @@
 
 /* Header */
 .marketplace-header {
-    background-color: #007bff;
+    background-color: #2f70ef;
     color: white;
     padding: 15px;
     text-align: center;
@@ -43,11 +43,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #109de2;
+    background-color: #2f70ef;
     color: white;
     border-radius: 8px;
     padding: 10px;
-    font-size: 24px;
+    font-size: 34px;
     margin-right: 15px;
     width: 50px;
     height: 50px;
@@ -57,11 +57,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #1e4870;
+    background-color: #0033a0;
     color: white;
     border-radius: 8px;
     padding: 10px;
-    font-size: 24px;
+    font-size: 34px;
     margin-right: 15px;
     width: 50px;
     height: 50px;
@@ -71,11 +71,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #5d717c;
+    background-color: #5d737e;
     color: white;
     border-radius: 8px;
     padding: 10px;
-    font-size: 24px;
+    font-size: 34px;
     margin-right: 15px;
     width: 50px;
     height: 50px;
@@ -87,7 +87,6 @@
 
 .option-title {
     font-size: 16px;
-    color: #109de2;
     margin: 0;
     font-weight: 100;
 }
@@ -113,6 +112,6 @@
 }
 
 .fa-chevron-right {
-    color: #109de2;
+    color: #2f70ef;
     font-size: 16px;
 }
