--- a/cap-marketplace-prototype/src/css/OnlineStores.css
+++ b/cap-marketplace-prototype/src/css/OnlineStores.css
@@ -44,9 +44,37 @@
 }
 
 .back-button i {
-    margin-right: 8px; /* Adds space between the icon and the text */
+    margin-right: 8px;
+    /* Adds space between the icon and the text */
 }
 
 .back-button span {
-    font-size: medium; /* Adds space between the icon and the text */
+    font-size: medium;
+    /* Adds space between the icon and the text */
+}
+
+.searchbar {
+    background-color: #2f70ef;
+    color: white;
+    padding: 15px;
+    text-align: center;
+    display: flex;
+    /* Flexbox to align items horizontally */
+    align-items: center;
+    /* Vertically align the text and input field */
+}
+
+.searchbar span {
+    font-size: 16px;
+    margin-right: 10px;
+    /* Space between the text and the input field */
+}
+
+.search-input {
+    padding: 8px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 200px;
+    /* Adjust width as needed */
 }
